styles/organisms/TagBar.scss
.tag-bar {
  background: $palette-white;
  display: block;
  height: 35px;
  padding: 5px;

  .tag-bar-input {
    border: none;
    margin: 0 5px;
  }

  .tag {
    border-radius: 3px;
    border: 1px solid lighten($color-border-blue, 20%);
    margin: 0 .25em 0 0;
    padding: 0 5px;

    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
  }

  .tag > a:before {
    font-size: .8em;
  }
  .tag .remove:after {
    content: ' ×';
    font-weight: bold;
    padding-left: .25em;
  }
}

